# pico-w-wol-pc-on

./: .gitignore  CMakeLists.txt  README.md  main.cpp
code/: CMakeLists.txt  main.cpp
pcb/pico-w-wol/: pico-w-wol.kicad_pcb  pico-w-wol.kicad_pro  pico-w-wol.kicad_sch
pcb/pico-w-wol/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
